--- a/ToolShop607and608Project/.classpath
+++ b/ToolShop607and608Project/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/josh_pozzy/OneDrive - UCalgary/OneDrive - University of Calgary/03 Fall Semester/Project 607 and 608/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Pozzy/Desktop/Masters/03 Fall Semester/Project 607 and 608/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar" sourcepath="C:/Users/Pozzy/Desktop/Masters/03 Fall Semester/Project 607 and 608/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
