--- a/ToolShop607and608Project/.classpath
+++ b/ToolShop607and608Project/.classpath
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-<<<<<<< HEAD
-	<classpathentry exported="true" kind="lib" path="C:/Users/Pozzy/Desktop/Masters/03 Fall Semester/Project 607 and 608/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar" sourcepath="C:/Users/Pozzy/Desktop/Masters/03 Fall Semester/Project 607 and 608/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
-=======
-	<classpathentry kind="src" path="Untouched original code"/>
 	<classpathentry kind="src" path="src"/>
->>>>>>> a8353bb0f4afc0294cdd47bf85098f1583e7564d
+	<classpathentry exported="true" kind="lib" path="C:/Users/Pozzy/Desktop/Masters/03 Fall Semester/Project 607 and 608/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
