--- a/ToolShop607and608Project/.classpath
+++ b/ToolShop607and608Project/.classpath
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Patrick Pickard 2.0/Documents/U of C M. Eng Software Spec. Program/ENSF 607 - Software Design and Architecture l/Assignments or Projects/Project/ENSF-608-and-607-Project/ToolShop607and608Project/mysql-connector-java-8.0.22.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Pozzy/Desktop/Masters/03 Fall Semester/Project 607 and 608/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
